--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ html{
     color: black;
 }
 
-@media only screen and (min-width: 425px){
+@media only screen and (min-width: 501px){
     .bi-list{
         display: none;
     }
@@ -123,6 +123,13 @@ html{
     font-family: Poppins;
     font-size: 5vw;
     margin-bottom: 4vw;
+}
+
+@media only screen and (max-width:500px){
+    .button{
+        font-size: 1vw;
+    }
+    
 }
 
 .button{
@@ -398,17 +405,6 @@ input[type="search"]{
     justify-content: space-between;
 }
 
-@media only screen and (max-width:500px){
-    .recom_bookcards{
-        display: grid;
-        grid-template-columns: auto auto;
-        width: 60vw;
-        row-gap: 5vw;
-        margin: 2vw auto 10vw auto;
-        justify-content: space-between;
-    }
-}
-
 /*Reviews*/
 .reviews{
     background-color: #FBFBFB;
@@ -511,6 +507,21 @@ input[type="search"]{
     font-family: Poppins;
     font-size: 2.75vw;
     color: black;
+}
+
+@media only screen and (max-width:500px){
+    .welcome h2{
+        font-family: Poppins;
+        font-size: 2.5vw;
+        color: black;
+    }
+    
+    .welcome p{
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 1.25vw;
+        font-weight: 500;
+        margin: 2vw 0vw;
+    }
 }
 
 .welcome p{
